[desktop fixes 2] fix visibility left column

--- a/themes/wiemar/_dev/css/components/categories.scss
+++ b/themes/wiemar/_dev/css/components/categories.scss
@@ -217,6 +217,9 @@
 
 #left-column {
   .featured-products {
+    @include media-breakpoint-down(lg) {
+      display: none !important;
+    }
     .products-section-title {
       padding: 0 !important;
       font-size: 18px !important;
